2011-10-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/yarpserver3.cpp: read settings from
	a config file if available [thanks Juan G Victores]

2011-09-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameClient.cpp: support a YARP_IP environment
	variable, that forces the IP address used for registering YARP
	ports to be in a particular family.  Prefixes allowed.  For
	example, on a machine with a 10.11.4.4 address and a 
	192.168.1.10 address, seeting YARP_IP to 192 or 192.168 or
	192.168.1.10 all result in the 192.... IP address being used.
	[thanks Zenon Mathews]

2011-09-16 Alessandro Scalzo <alessandro.scalzo@iit.it>

        * src/libYARP_OS/include/yarp/os/impl/RunReadWrite.h
        * src/libYARP_OS/src/Run.cpp
        * src/libYARP_OS/src/RunProcManager.cpp
        * src/libYARP_OS/src/RunReadWrite.cpp
	Added persistence to stdio connections in yarprun.

2011-09-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: patch from Stephane, with tweaks to Vector
	translation for C#; less confusing isMotionDone method
	[thanks Stephane Lallee]

2011-09-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Value.cpp: make copy behavior between Values
	specialized for different types more intuitive
	[thanks Alessandro Scalzo]

	* src/libYARP_OS/harness/ValueTest.cpp: add regression
	test for unintuitive copy behavior between Values specialized
	for different types [thanks Alessandro Scalzo]

	* src/libYARP_OS/src/NameSpace.cpp: fix regression in behavior
	of yarp::os::Network::checkNetwork [thanks Martin Peniak]

2011-09-12 Lorenzo Natale <lorenzo.natale@iit.it>
        * conf/YarpVersion.cmake
        tagging 2.3.12
     
2011-09-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: apply patch to add interfaces for impedance
	and torque control [thanks Stephane Lallee]

2011-09-09  Andrea Del Prete    <andrea.delprete@iit.it>
	* src/libYARP_math/src/math.cpp